--- a/lesson 1-2/index.html
+++ b/lesson 1-2/index.html
@@ -5,7 +5,7 @@
   <title>Tasks JS</title>
 </head>
 <body>
-<!--  <script type="text/ecmascript" src="task1.js"></script>-->
-  <script type="text/ecmascript" src="task2.js"></script>
+<!--  <script type="text/javascript" src="task1.js"></script>-->
+  <script type="text/javascript" src="task2.js"></script>
 </body>
 </html>
